feat: реализовать Этап 3. Дополнительная функциональность